fix the slideout menu overflowing issue on header design 02

--- a/lms/static/sass/header/_header-appsembler-02.scss
+++ b/lms/static/sass/header/_header-appsembler-02.scss
@@ -123,6 +123,11 @@
 
         ul {
           display: block;
+          visibility: hidden;
+
+          &.a--active {
+            visibility: visible;
+          }
         }
       }
 
@@ -379,7 +384,7 @@
 
 
   .a--slide-menu__container, ul.a--slide-menu__container {
-    position: absolute;
+    position: fixed;
     z-index: 1001;
     width: 100%;
     max-width: 100%;
